test/fail/generated/test_log_softmax_spatial/test_data_set_0/input_0.pb
J>wUH7>mAt5ʨ<??]Q=?S#?JE?k@سmm?xUp$MӈIo?yFˀ>?H]~mmG"?ٶ?
BI?&ZoM?'>:߅ttm;>>>G=
~>>?i?w^9$?k߿cI,C=3?h#>Np>0?Ǿ@?t?[=